[gd_scene load_steps=3 format=2]

[ext_resource path="res://BaseWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://overlay_resources/Window.gd" type="Script" id=2]

[node name="Overlay" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="PrevClass" type="Button" parent="Buttons" index="5"]
margin_left = 189.0
margin_right = 222.0
margin_bottom = 40.0
text = " < "

[node name="Classname" type="Label" parent="Buttons" index="6"]
margin_left = 226.0
margin_top = 8.0
margin_right = 267.0
margin_bottom = 31.0
text = "Class"

[node name="NextClass" type="Button" parent="Buttons" index="7"]
margin_left = 271.0
margin_right = 300.0
margin_bottom = 40.0
text = "> "

[node name="DesktopToggle" type="Button" parent="Buttons" index="8"]
margin_left = 304.0
margin_right = 337.0
margin_bottom = 40.0
toggle_mode = true
text = " ^ "

[node name="ModalToggle" type="Button" parent="Buttons" index="9"]
margin_left = 341.0
margin_right = 372.0
margin_bottom = 40.0
toggle_mode = true
pressed = true
text = "M"

[node name="Title" type="Label" parent="Buttons" index="10"]
margin_left = 376.0
margin_top = 8.0
margin_right = 411.0
margin_bottom = 31.0
text = "Title"

[connection signal="pressed" from="Buttons/PrevClass" to="." method="_on_PrevClass_pressed"]
[connection signal="pressed" from="Buttons/NextClass" to="." method="_on_NextClass_pressed"]
[connection signal="toggled" from="Buttons/DesktopToggle" to="." method="_on_DesktopToggle_toggled"]
[connection signal="toggled" from="Buttons/ModalToggle" to="." method="_on_ModalToggle_toggled"]
